[tool.poetry]
name = "asyncio-chainable"
version = "0.1.2"
description = "Making asyncio coroutines chainable"
authors = ["Chris Lee <sihrc.c.lee@gmail.com>"]
readme = "README.md"
include = ["LICENSE",]
keywords = ["asyncio"]
license = "MIT"
homepage = "https://github.com/sihrc/asyncio-chainable"
repository = "https://github.com/sihrc/asyncio-chainable"

[tool.poetry.dependencies]
python = "^3.7"
setuptools = "^57.4.0"
pytest = {version = "^6.2.4", extras = ["test"]}
pytest-asyncio = {version = "*", extras = ["test"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
