[tool.poetry]
name = "indicodata-asyncio-chainable"
version = "0.1.3"
description = "Making asyncio coroutines chainable"
authors = ["Chris Lee <sihrc.c.lee@gmail.com>"]
readme = "README.md"
packages = [{include = "asyncio_chainable"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "<8"
pytest-asyncio = "<0.21"

[tool.pytest.ini_options]
addopts = "-ra -sv"
asyncio_mode="auto"
testpaths = [
    "tests"
]

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "development"
upload_to_repository=true
repository_url="https://push.fury.io/indico"
build_command="poetry build"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/indico/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
